fixed init bug, updated some jade

--- a/node/views/locations/location.jade
+++ b/node/views/locations/location.jade
@@ -2,6 +2,6 @@
 
 hr
 
-h2= location.name
-a(href='/locations/'+location.name).id= location.name
-.id= location.id
+//- h2= location.name
+h2: a(href='/locations/'+location.id).id= location.name
+//- .id= location.id
