fixed obvious bug with LOCATIONS in app.js+adminjs

--- a/node/views/locations/location.jade
+++ b/node/views/locations/location.jade
@@ -3,5 +3,5 @@
 hr
 
 //- h2= location.name
-h2: a(href='/locations/'+location.id).id= location.name
+h2: a(href='/location/'+location.id).id= location.name
 //- .id= location.id
