--- a/node/views/footer.jade
+++ b/node/views/footer.jade
@@ -1,6 +1,10 @@
 
-hr
+br
+br
 
 //-p.footer
-
-h4  "[logo] Douglas Elliman Controller"
+hr
+hr
+img(src="http://darrensukenik.com/wp-content/uploads/2012/11/douglas-elliman.jpg" width="200px")
+h4  Douglas Elliman Controller
+a(href='/') HOME
