stylized, added like and back buttons

--- a/node/views/footer.jade
+++ b/node/views/footer.jade
@@ -7,4 +7,5 @@ hr
 hr
 img(src="http://darrensukenik.com/wp-content/uploads/2012/11/douglas-elliman.jpg" width="200px")
 h4  Douglas Elliman Controller
-a(href='/') HOME
+a(href='/about').pure-button About
+a(href='/').pure-button HOME
