--- a/node/views/header.jade
+++ b/node/views/header.jade
@@ -2,3 +2,5 @@
 head
   title Douglas Elliman Controller
   //- link(rel="stylesheet", href="/stylesheets/style.css")
+  link(rel="stylesheet", href="http://yui.yahooapis.com/pure/0.5.0/pure-min.css")
+  meta(name='viewport', content='width=device-width, initial-scale=1')
