OSC now sends arg 1 followed by arg 0 immediately. removed image links (only arrows for image movement)

--- a/node/views/locations/index.jade
+++ b/node/views/locations/index.jade
@@ -64,7 +64,8 @@ block content
     div.imagetable
       for image in property.img
         //- h6 #{image.url}
-        a(href='/property/'+property.id+'/'+image.id): img(src=image.url width="250px")
+        //-a(href='/property/'+property.id+'/'+image.id):
+        img(src=image.url width="250px")
 
     hr
 
