--- a/iOS/VolvoxControllerApp/www/css/index.css
+++ b/iOS/VolvoxControllerApp/www/css/index.css
@@ -1,6 +1,11 @@
-* {
+*, *:link {
   -webkit-tap-highlight-color: transparent;
   /* make transparent link selection, adjust last value opacity 0 to 1.0 */
+  list-style: none;
+  text-decoration: none;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 body {
@@ -25,16 +30,62 @@ header {
   top: 0px;
   left: 0px;
   z-index: 1;
-  background: #dfdfdf;
+  background: #fafafa;
+  border-bottom: 1px #e2e2e2 solid;
   width: 100%;
   text-align: center;
-  padding: 10px 0px 5px 0px;
+  padding: 0px;
 }
-header p.locations {
-  font-size: 1.1em;
-  margin: 15px 0px 5px 0px;
+header .header_title {
+  margin: 28px 0px 7px 0px;
+  font-size: 1.2em;
+  font-weight: 600;
+}
+
+footer {
+  position: fixed;
+  bottom: 0px;
+  left: 0px;
+  width: 100%;
+  height: 70px;
+  border-top: 1px solid #e3e3e3;
+  background: #fff;
+}
+footer .left {
+  float: left;
+  width: 50%;
+  height: 100%;
+  background: url(../img/douglas_logo.png) no-repeat;
+  -webkit-background-size: contain;
+  background-size: contain;
+  background-position: 50% 50%;
+}
+footer .right {
+  float: right;
+  width: 50%;
+  text-align: right;
+  font-size: 1.25em;
+  padding: 22px;
 }
 
 .body {
-  margin-top: 80px;
+  margin-top: 57px;
+}
+.body a:nth-child(odd) .list_title {
+  background: #f2f2f2;
+}
+.body a:nth-child(even) .list_title {
+  background: #fbfbfb;
+}
+
+.list_title {
+  font-size: 1.3em;
+  margin: 0px;
+  padding: 15px 20px;
+  border-bottom: 1px solid #fafafa;
+}
+
+.flag {
+  float: right;
+  color: #d0d0d0;
 }
