--- a/iOS/VolvoxControllerApp/www/css/index.scss
+++ b/iOS/VolvoxControllerApp/www/css/index.scss
@@ -89,3 +89,54 @@ footer {
     float: right;
     color: #d0d0d0;
 }
+
+// Carousel
+.slick_carousel {
+    width: 100%;
+    .slick_carousel_bg {
+        width: 100%;
+        height: 250px;
+        img {
+            height: 100%;
+        }
+    }
+}
+
+// prop info
+.prop_info {
+    height: 100%;
+    overflow-y: scroll;
+}
+
+// back button
+.backBtn {
+    position: absolute;
+    top: 27px;
+    left: 20px;
+    color: #1f5fc5;
+    font-size: 1.25em;
+    cursor: pointer;
+}
+
+// favBtn
+.favBtn {
+    position: absolute;
+    top: 25px;
+    right: 20px;
+    color: #98a4b9;
+    font-size: 2em;
+    cursor: pointer;
+}
+
+.faved {
+    color: #a81823 !important;
+}
+
+#share_form {
+    padding: 20px 20px;
+}
+
+.prop_info {
+    padding: 20px;
+}
+
