--- a/iOS/VolvoxControllerApp/www/css/index.css
+++ b/iOS/VolvoxControllerApp/www/css/index.css
@@ -72,7 +72,9 @@ footer .right {
 }
 
 .body {
-  margin-top: 57px;
+  padding: 57px 0px;
+  height: 100%;
+  overflow-y: scroll;
 }
 .body a:nth-child(odd) .list_title {
   background: #f2f2f2;
@@ -104,18 +106,18 @@ footer .right {
   height: 100%;
 }
 
-.prop_info {
-  height: 100%;
-  overflow-y: scroll;
-}
-
 .backBtn {
   position: absolute;
-  top: 27px;
-  left: 20px;
+  top: 0px;
+  left: 0px;
+  padding: 28px 25px 10px 20px;
   color: #1f5fc5;
   font-size: 1.25em;
   cursor: pointer;
+}
+
+.backBtn:active {
+  font-weight: 800;
 }
 
 .favBtn {
