--- a/iOS/DEProperties/platforms/ios/www/css/index.css
+++ b/iOS/DEProperties/platforms/ios/www/css/index.css
@@ -47,8 +47,8 @@ header .header_title {
 
 footer {
   position: fixed;
+    padding-left: 20px;
   bottom: 0px;
-  left: 0px;
   width: 100%;
   height: 70px;
   border-top: 1px solid #e3e3e3;
@@ -56,19 +56,23 @@ footer {
 }
 footer .left {
   float: left;
-  width: 50%;
+  padding-left: 25px;
+  width: 45%;
+  
   height: 100%;
   background: url(../img/douglas_logo.png) no-repeat;
   -webkit-background-size: contain;
-  background-size: contain;
-  background-position: 50% 50%;
+/*   background-origin:content-box; */
+/*   background-size: contain; */
+  background-position: 70% 50%;
 }
 footer .right {
   float: right;
   width: 50%;
+/*   border:1px dotted #000000; */
   text-align: right;
   font-size: 1.25em;
-  padding: 22px;
+  padding: 22px 15px 0px 10px;
 }
 
 .body {
