--- a/iOS/DEProperties/www/css/index.css
+++ b/iOS/DEProperties/www/css/index.css
@@ -45,6 +45,12 @@ header .header_title {
   font-weight: 600;
 }
 
+header .header_title_long {
+  margin: 60px 0px 7px 0px;
+  font-size: 1.1em;
+  font-weight: 600;
+}
+
 footer {
   position: fixed;
   padding-left: 15px;
@@ -100,10 +106,9 @@ footer .right {
 }
 
 .slick_carousel {
-/*
   float: top;
-  padding-top:25px;
-*/
+  position:relative;
+  padding-top:10px;
   width: 100%;
   
 }
