--- a/iOS/DEProperties/www/css/index.css
+++ b/iOS/DEProperties/www/css/index.css
@@ -21,6 +21,19 @@ body {
   height: 100%;
 }
 
+body prop{
+  -webkit-touch-callout: none;
+  /* prevent callout to copy image, etc when tap to hold */
+  -webkit-text-size-adjust: none;
+  /* prevent webkit from resizing text to fit */
+  -webkit-user-select: none;
+  /* prevent copy paste, to allow, change 'none' to 'text' */
+  width: 100%;
+  position: relative;
+  width: 100%;
+  height: 100%;
+}
+
 #view {
   position: absolute;
   width: 100%;
@@ -36,19 +49,25 @@ header {
   background: #fafafa;
   border-bottom: 1px #e2e2e2 solid;
   width: 100%;
-  text-align: center;
-  padding: 0px;
-}
-header .header_title {
-  margin: 28px 30px 7px 30px;
-  font-size: 1.2em;
-  font-weight: 600;
 }
 
-header .header_title_long {
-  margin: 60px 0px 7px 0px;
-  font-size: 1.1em;
+header .header_title {
+  margin: 22px 30px 17px 30px;
+  font-size: 1.2em;
   font-weight: 600;
+    text-align: center;
+}
+
+header .header_prop_title {
+position:relative;
+  text-align: center;
+/*   border:3px dotted #00FF00; */
+  margin: 54px 18px 7px 18px;
+  text-align: center;
+  font-size: 1.3em;
+  font-weight: 600;
+  min-height: 30px;
+/*   z-index: -1; */
 }
 
 footer {
@@ -73,18 +92,16 @@ footer .left {
 footer .right {
   float: right;
   width: 50%;
-/*   border:1px dotted #000000; */
   text-align: right;
   font-size: 1.25em;
-  padding: 18px 15px 0px 10px;
+  padding: 18px 30px 0px 0px;
 }
 
 .body {
-  padding: 57px 0px;
+  padding: 60px 0px;
   height: 100%;
-  /*overflow-y: scroll;*/
   overflow-x:hidden;
-    overflow-y:scroll;
+  overflow-y:scroll;
 }
 .body a:nth-child(odd) .list_title {
   background: #f2f2f2;
@@ -93,22 +110,46 @@ footer .right {
   background: #fbfbfb;
 }
 
+
+.body .prop{
+  -webkit-touch-callout: none;
+  /* prevent callout to copy image, etc when tap to hold */
+  -webkit-text-size-adjust: none;
+  /* prevent webkit from resizing text to fit */
+  -webkit-user-select: none;
+  /* prevent copy paste, to allow, change 'none' to 'text' */
+  width: 100%;
+  position: relative;
+  float:top;
+  width: 100%;
+  height: 100%;
+}
+
+
 .list_title {
+/*   border:3px dotted #000000; */
   font-size: 1.3em;
-  margin: 0px;
-  padding: 15px 20px;
+  margin: 0px 0px 0px 0px;
+  padding: 15px 30px 15px 20px;
   border-bottom: 1px solid #fafafa;
 }
 
+.list_title:active {
+	font-weight: 600;
+}
+
 .flag {
-  float: right;
-  color: #d0d0d0;
+	float: right;
+	float: top;
+	color: #d0d0d0;
+	margin: 0px -10px 5px 0px;
+	padding-left: 5px;
 }
 
 .slick_carousel {
   float: top;
   position:relative;
-  padding-top:10px;
+  margin-top:42px;
   width: 100%;
   
 }
@@ -117,28 +158,36 @@ footer .right {
   height: 200px;
 }
 .slick_carousel .slick_carousel_bg img {
+  position:relative;
   height: 100% ;
   width:100%; 
 }
 
 .backBtn {
+/*   border:1px dotted #000000; */
   position: absolute;
   top: 0px;
   left: 0px;
-  padding: 28px 25px 10px 20px;
+  padding: 22px 70px 17px 20px;
   color: #1f5fc5;
   font-size: 1.25em;
   cursor: pointer;
 }
 
 .backBtn:active {
-  font-weight: 800;
+  font-weight: 600;
+  font-size: 1.25em;
 }
 
 .favBtn {
-  position: absolute;
-  top: 25px;
-  right: 20px;
+/*   border:2px dotted #000000; */
+  right: 0px;
+  position:absolute;
+  float:right;
+  z-index: -1;
+  float: right;
+  margin: 0px 0px 0px 0px;
+  padding: 25px 20px 20px 70px;
   color: #98a4b9;
   font-size: 2em;
   cursor: pointer;
@@ -152,15 +201,92 @@ footer .right {
   padding: 20px 20px;
 }
 
+#share_form input[type=text] {
+  width:95%;
+  text-align: center;
+  font-size: 1.3em;
+}
+
+#share_form input[type=email] {
+  width:95%;
+  text-align: center;
+  font-size: 1.3em;
+}
+
+#share_form input[type=submit] {
+/*   padding:50px 50px 50px 50px;  */
+	margin:20 auto;
+	margin-bottom:10px;
+	margin-left:10%;
+	width: 210px;
+	height:50px;
+	font-size: 1.0em;
+	background:#ccc; 
+	border:0 none;
+}
 .prop_info {
   padding: 20px;
 }
 
-#fav_list {
-  padding: 15px 20px 0px 20px;
-  font-size: 1.5em;
+#fav_list label{
+  padding: 12px 20px 0px 20px;
+  font-size: 0.9em;
+  min-height:40px;
+  background: #fbfbfb;
 }
-#fav_list .fav_delete {
+#fav_list {
+  border-bottom: 1px solid #ccc;
+  }
+
+#fav_list li:nth-child(even) {
+  background: #f2f2f2;
+}
+#fav_list li:nth-child(odd) {
+  background: #fbfbfb;
+}
+
+.fav_item {
+/*   border:1px dotted #0000FF; */
+  font-size: 1.0em;
+  margin: 0px 0px 0px 0px;
+  padding: 15px 25px 15px 20px;
+  border-bottom: 1px solid #fafafa;
+}
+.fav_delete {
+/*   border:1px dotted #000000; */
+  margin:-8px -15px 0px 0px;
+  padding-top: 5px;
+  min-height: 40px;
   float: right;
-  font-size: 1.5em;
+  font-size: 2.5em;
+  font-weight: 600;
+  color:#a81823;
+}
+
+.fav_delete:active {
+	color: #000000;
+}
+
+.shareBtn {
+	padding: 15px 0px 20px 10px;
+/* 	  border:2px dotted #000000; */
+}
+
+.aboutBtn {
+	padding: 15px 10px 20px 0px;
+	margin: 0px -15px 0px 0px;
+/* 	  border:2px dotted #000000; */
+}
+.shareBtn:active {
+	font-weight: 600;
+}
+
+.aboutBtn:active {
+	font-weight: 600;
+}
+
+.about_body p{
+	margin:10px 5px 10px 2px;
+	padding: 10px 20px;
+	text-align: left;
 }
