--- a/iOS/DEPortfolio/platforms/ios/www/css/index.css
+++ b/iOS/DEPortfolio/platforms/ios/www/css/index.css
@@ -62,12 +62,17 @@ header .header_prop_title {
 position:relative;
   text-align: center;
 /*   border:3px dotted #00FF00; */
-  margin: 54px 18px 7px 18px;
+  margin: 20px 18px 7px 18px;
   text-align: center;
   font-size: 1.3em;
   font-weight: 600;
   min-height: 30px;
 /*   z-index: -1; */
+}
+
+.in_prop {
+  color:#999 !important;
+  font-weight: 300 !important;
 }
 
 footer {
@@ -134,6 +139,16 @@ footer .right {
   border-bottom: 1px solid #fafafa;
 }
 
+.loc {
+  font-size: 1.3em !important;
+  padding: 25px 30px 25px 20px !important;
+}
+
+.loc_list_sub { /* when viewing a list of properties */
+  color:#999;
+}
+
+
 .list_title:active {
 	/*font-weight: 600;*/
   color: #4aa5c2;
@@ -190,7 +205,7 @@ footer .right {
   z-index: -1;
   float: right;
   margin: 0px 0px 0px 0px;
-  padding: 25px 20px 20px 70px;
+  padding: 21px 20px 20px 70px;
   color: #98a4b9;
   font-size: 2em;
   cursor: pointer;
@@ -228,8 +243,16 @@ footer .right {
 	border:0 none;
 }
 .prop_info {
-  padding: 20px;
+  padding: 5px 20px 15px 20px;
 }
+
+.space { 
+  margin-bottom: 30px;
+/*line-height: 3.0em; */
+}
+/*.prop_info p {
+  line-height: 3px;
+*/
 
 #fav_list label{
   padding: 12px 20px 0px 20px;
