--- a/iOS/Portfolio/www/css/index.css
+++ b/iOS/Portfolio/www/css/index.css
@@ -19,6 +19,7 @@ body {
   position: fixed;
   width: 100%;
   height: 100%;
+  -webkit-overflow-scrolling: touch;
 }
 
 body prop{
@@ -32,6 +33,7 @@ body prop{
   position: relative;
   width: 100%;
   height: 100%;
+  -webkit-overflow-scrolling: touch;
 }
 
 #view {
